в тесте getHistory() get() заменен на getFirst(),  в тесте maxSizeofHistoryShouldBeTen() assertTrue() заменен на assertEquals()